Added installation steps for both JavaFX and Postgres, as well as other details around the project